--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   badges: ^2.0.3
   carousel_slider: ^4.1.1
   smooth_page_indicator: ^1.0.0+2
+  drag_and_drop_lists: ^0.3.2+2
 
 
 
